--- a/domain_analyse_settings.yml
+++ b/domain_analyse_settings.yml
@@ -23,11 +23,12 @@ statistics:
       sbi: sbi_digit1_statline
 plots:
   internet_gk_vanaf_2: # bedrijfsgrootte, per gk vanaf 2
-    do_it: true
   statline_gk_all: # bedrijfsgrootte,  2 en meer WP
     do_it: false
   statline_sbi_digit1:
-    do_it: false
+    do_it: true
+    use_breakdown_keys: true
+    legend_title: Branche
 index:
   be_id: be_id
 weight: ratio_units
