--- a/domain_analyse_settings.yml
+++ b/domain_analyse_settings.yml
@@ -23,12 +23,19 @@ statistics:
       sbi: sbi_digit1_statline
 plots:
   internet_gk_vanaf_2: # bedrijfsgrootte, per gk vanaf 2
+    legend_title: "# Werknemers"
+    figsize:
+      - 6.5
+      - 3.4
   statline_gk_all: # bedrijfsgrootte,  2 en meer WP
     do_it: false
   statline_sbi_digit1:
     do_it: true
     use_breakdown_keys: true
     legend_title: Branche
+    figsize:
+      - 6.5
+      - 3.4
 index:
   be_id: be_id
 weight: ratio_units
