--- a/domain_analyse_settings.yml
+++ b/domain_analyse_settings.yml
@@ -20,7 +20,7 @@ general:
       replace: ""
 statistics:
   internet_gk_vanaf_2: # bedrijfsgrootte, per gk vanaf 2
-    do_it: true
+    do_it: false
     groupby:
       gk: gk_vanaf_2
   statline_gk_all: # bedrijfsgrootte,  2 en meer WP
@@ -28,7 +28,7 @@ statistics:
     groupby:
       gk: gk_all_wp
   statline_gk_all_dtc: # bedrijfsgrootte,  2 en meer WP
-    do_it: true
+    do_it: false
     scan_data: dtc_web
     groupby:
       gk: gk_all_wp
@@ -38,6 +38,7 @@ statistics:
       sbi: sbi_digit1_statline
 plots:
   internet_gk_vanaf_2: # bedrijfsgrootte, per gk vanaf 2
+    do_it: false
     label: "Bedrijfsgrootteklasse"
     legend_title: "# Werknemers"
     figsize:
@@ -51,7 +52,9 @@ plots:
         label: DTC
         xoff: 0.02
   statline_gk_all: # bedrijfsgrootte,  2 en meer WP
-    do_it: false
+    do_it: true
+    cdf_plot: true
+    bar_plot: false
   statline_sbi_digit1:
     do_it: false
     use_breakdown_keys: true
@@ -339,11 +342,11 @@ module_info:
     label: Totaal score
     description: Totale score van alle resultaten
   categories:
-    include: true
+    include: false
     label: Categories
     description: Micro variabeles scan result
   tests:
-    include: true
+    include: false
     label: Test
     description: Micro variabeles scan result
 breakdown_labels:
