--- a/domain_analyse_settings.yml
+++ b/domain_analyse_settings.yml
@@ -20,20 +20,24 @@ general:
       replace: ""
 statistics:
   internet_gk_vanaf_2: # bedrijfsgrootte, per gk vanaf 2
-    do_it: false
+    do_it: true
     groupby:
       gk: gk_vanaf_2
   statline_gk_all: # bedrijfsgrootte,  2 en meer WP
     do_it: true
     groupby:
       gk: gk_all_wp
+  statline_gk3: # bedrijfsgrootte,  2 en meer WP
+    do_it: true
+    groupby:
+      gk: gk3_stat_wp
   statline_gk_all_dtc: # bedrijfsgrootte,  2 en meer WP
-    do_it: false
+    do_it: true
     scan_data: dtc_web
     groupby:
       gk: gk_all_wp
   statline_sbi_digit1:
-    do_it: false
+    do_it: true
     groupby:
       sbi: sbi_digit1_statline
 plots:
@@ -52,9 +56,18 @@ plots:
         label: DTC
         xoff: 0.02
   statline_gk_all: # bedrijfsgrootte,  2 en meer WP
-    do_it: true
+    do_it: false
     cdf_plot: true
     bar_plot: false
+  statline_gk3: # bedrijfsgrootte,  klasse met gk3 indeling
+    do_it: true
+    cdf_plot: true
+    bar_plot: true
+    label: "Bedrijfsgrootteklasse"
+    legend_title: "# Werknemers"
+    figsize:
+      - 6.5
+      - 3.4
   statline_sbi_digit1:
     do_it: false
     use_breakdown_keys: true
