--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@
 name = internetnl_domain_analyse
 description = Add a short description here!
 author = EVLT
-author_email = 
+author_email =
 license = MIT
 long_description = file: README.rst
 long_description_content_type = text/x-rst; charset=UTF-8
@@ -67,8 +67,8 @@ testing =
 
 [options.entry_points]
 # Add here console scripts like:
-# console_scripts =
-#     script_name = domain_analyser.module:function
+console_scripts =
+    internetnl_domain_analyse = domain_analyser.domein_analyse:main
 # For example:
 # console_scripts =
 #     fibonacci = domain_analyser.skeleton:run
