--- a/examples/domain_analyse_settings.yml
+++ b/examples/domain_analyse_settings.yml
@@ -13,9 +13,15 @@ general:
   tex_prepend_path: figures/scan_results
   image_type: .pdf
   cache_directory: cache
+  records_cache_file: records_cache_20.sqlite
+  records_table_names:
+    - records_df_20_2
+    - info_records_df_20
   n_digits: 1
   n_bins: 50
-  cdf_plot: false
+  barh: true
+  cummulative: false
+  show_title: false
   sheet_renames:
     statline:
       pattern: "statline_"
@@ -58,21 +64,34 @@ plots:
         label: DTC
         xoff: 0.02
   statline_gk_all: # bedrijfsgrootte,  2 en meer WP
-    do_it: false
+    do_it: true
     cdf_plot: true
     bar_plot: false
+    y_max_pdf_plot: 8
+    y_spacing_pdf_plot: 2
+    label: "Bedrijfsgrootteklasse"
+    legend_title: "# Werknemers"
   statline_gk3: # bedrijfsgrootte,  klasse met gk3 indeling
     do_it: true
     cdf_plot: true
     bar_plot: true
+    y_max_pdf_plot: 15
+    y_spacing_pdf_plot: 5
     label: "Bedrijfsgrootteklasse"
     legend_title: "# Werknemers"
     figsize:
       - 6.5
       - 3.4
   statline_sbi_digit1:
-    do_it: false
-    use_breakdown_keys: true
+    do_it: true
+    cdf_plot: true
+    bar_plot: true
+    use_breakdown_keys: false
+    y_max_bar_plot: 71
+    y_spacing_bar_plot: 10
+    sort_values: true
+    subplot_adjust:
+      left:  0.5
     label: "Branche"
     legend_title: Branche
     figsize:
@@ -377,6 +396,11 @@ breakdown_labels:
     WP19109: 500-     # 500 of meer
   statline_gk_all:
     WP19115: Totaal NL  # bedrijfsgrootte, 2 en meer WP
+  statline_gk3: # bedrijfsgrootte,  2 en meer WP
+    WP19080: 2 tot 10 werkzame personen
+    WP19090: 10 tot 50 werkzame personen
+    WP19097: 50 tot 250 werkzame personen
+    WP19107: 250 of meer werkzame personen
   statline_sbi_digit1:
     "C": "Industrie"
     "D-E": "Energie/water/afval"
@@ -388,5 +412,5 @@ breakdown_labels:
     "K": "Financiële dienstverlening"
     "L": "Verhuur/handel ontr.goed"
     "M": "Special. zakelijke dienstver."
-    "N": "Verhuur en overige zakelijke diensten"
+    "N": "Verhuur/overige zakelijke dnst."
     "Q": "Gezondheid en welzijnszorg"
