--- a/setup.cfg
+++ b/setup.cfg
@@ -30,24 +30,19 @@ classifiers =
     Development Status :: 4 - Beta
     Programming Language :: Python
 
-
 [options]
 zip_safe = False
-packages = find_namespace:
+packages = find:
 include_package_data = True
 package_dir =
     =src
-
-# Require a min/specific Python version (comma-separated conditions)
-# python_requires = >=3.8
-
-# Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
-# Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
-# new major versions. This works if the required packages follow Semantic Versioning.
-# For more information, check out https://semver.org/.
+# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
+setup_requires = pyscaffold>=3.3a0,<4
+# Add here dependencies of your project (semicolon-separated), e.g.
+# install_requires = numpy; scipy
 install_requires =
-    importlib-metadata; python_version<"3.8"
-
+# Add here test requirements (semicolon-separated)
+tests_require = pytest; pytest-cov
 
 [options.packages.find]
 where = src
@@ -58,12 +53,6 @@ exclude =
 # Add here additional requirements for extra features, to install with:
 # `pip install internetnl_domain_analyse[PDF]` like:
 # PDF = ReportLab; RXP
-
-# Add here test requirements (semicolon/line-separated)
-testing =
-    setuptools
-    pytest
-    pytest-cov
 
 [options.entry_points]
 # Add here console scripts like:
@@ -83,8 +72,9 @@ console_scripts =
 # CAUTION: --cov flags may prohibit setting breakpoints while debugging.
 #          Comment those flags to avoid this py.test issue.
 addopts =
-    --cov domain_analyser --cov-report term-missing
-    --verbose
+    # --cov ict_analyser --cov-report term-missing
+    # --cov ../src/ict_analyser/analyser_tool
+    # --verbose
 norecursedirs =
     dist
     build
@@ -99,6 +89,10 @@ testpaths = tests
 # Use this option if your package is pure-python
 universal = 1
 
+[build_sphinx]
+source_dir = docs
+build_dir = docs/_build
+
 [devpi:upload]
 # Options for the devpi: PyPI server and packaging tool
 # VCS export must be deactivated since we are using setuptools-scm
@@ -107,10 +101,6 @@ formats = bdist_wheel
 
 [flake8]
 # Some sane defaults for the code style checker flake8
-max_line_length = 88
-extend_ignore = E203, W503
-# ^  Black-compatible
-#    E203 and W503 have edge cases handled by black
 exclude =
     .tox
     build
@@ -121,7 +111,5 @@ exclude =
 [pyscaffold]
 # PyScaffold's parameters when the project was created.
 # This will be used when updating. Do not change!
-version = 4.0.1
-package = domain_analyser
-extensions =
-    no_skeleton
+version = 3.3.1
+package = internetnl_domain_analyse
