--- a/setup.cfg
+++ b/setup.cfg
@@ -23,7 +23,6 @@ project_urls =
 
 # Change if running only on Windows, Mac or Linux (comma-separated)
 platforms = any
-
 # Add here all kinds of additional classifiers as defined under
 # https://pypi.python.org/pypi?%3Aaction=list_classifiers
 classifiers =
@@ -40,9 +39,10 @@ package_dir =
 setup_requires = pyscaffold>=3.3a0,<4
 # Add here dependencies of your project (semicolon-separated), e.g.
 # install_requires = numpy; scipy
-install_requires =
-# Add here test requirements (semicolon-separated)
-tests_require = pytest; pytest-cov
+# The usage of test_requires is discouraged, see `Dependency Management` docs
+# tests_require = pytest; pytest-cov
+# Require a specific Python version, e.g. Python 2.7 or >= 3.4
+# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
 
 [options.packages.find]
 where = src
@@ -53,6 +53,10 @@ exclude =
 # Add here additional requirements for extra features, to install with:
 # `pip install internetnl_domain_analyse[PDF]` like:
 # PDF = ReportLab; RXP
+# Add here test requirements (semicolon/line-separated)
+testing =
+    pytest
+    pytest-cov
 
 [options.entry_points]
 # Add here console scripts like:
@@ -65,16 +69,19 @@ console_scripts =
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
 
+[test]
+# py.test options when running `python setup.py test`
+# addopts = --verbose
+extras = True
+
 [tool:pytest]
-# Specify command line options as you would do when invoking pytest directly.
+# Options for py.test:
+# Specify command line options as you would do when invoking py.test directly.
 # e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
 # in order to write a coverage file that can be read by Jenkins.
-# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
-#          Comment those flags to avoid this py.test issue.
 addopts =
-    # --cov ict_analyser --cov-report term-missing
-    # --cov ../src/ict_analyser/analyser_tool
-    # --verbose
+    --cov internetnl_domain_analyse --cov-report term-missing
+    --verbose
 norecursedirs =
     dist
     build
@@ -83,7 +90,9 @@ testpaths = tests
 # Use pytest markers to select/deselect specific tests
 # markers =
 #     slow: mark tests as slow (deselect with '-m "not slow"')
-#     system: mark end-to-end system tests
+
+[aliases]
+dists = bdist_wheel
 
 [bdist_wheel]
 # Use this option if your package is pure-python
@@ -91,16 +100,20 @@ universal = 1
 
 [build_sphinx]
 source_dir = docs
-build_dir = docs/_build
+build_dir = build/sphinx
 
 [devpi:upload]
 # Options for the devpi: PyPI server and packaging tool
 # VCS export must be deactivated since we are using setuptools-scm
-no_vcs = 1
+no-vcs = 1
 formats = bdist_wheel
 
 [flake8]
 # Some sane defaults for the code style checker flake8
+max-line-length = 88
+extend-ignore = E203, W503
+# ^  Black-compatible
+#    E203 and W503 have edge cases handled by black
 exclude =
     .tox
     build
