--- a/setup.cfg
+++ b/setup.cfg
@@ -31,12 +31,11 @@ classifiers =
 
 [options]
 zip_safe = False
-packages = find:
+packages = find_namespace:
 include_package_data = True
 package_dir =
     =src
 # DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
-setup_requires = pyscaffold>=3.3a0,<4
 # Add here dependencies of your project (semicolon-separated), e.g.
 # install_requires = numpy; scipy
 # The usage of test_requires is discouraged, see `Dependency Management` docs
@@ -44,6 +43,8 @@ setup_requires = pyscaffold>=3.3a0,<4
 # Require a specific Python version, e.g. Python 2.7 or >= 3.4
 # python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
 
+install_requires =
+    importlib-metadata; python_version<"3.8"
 [options.packages.find]
 where = src
 exclude =
@@ -124,5 +125,5 @@ exclude =
 [pyscaffold]
 # PyScaffold's parameters when the project was created.
 # This will be used when updating. Do not change!
-version = 3.3.1
+version = 4.2.1
 package = internetnl_domain_analyse
