--- a/setup.cfg
+++ b/setup.cfg
@@ -65,7 +65,7 @@ console_scripts =
     internetnl_domain_analyse = domain_analyser.domein_analyse:main
 # For example:
 # console_scripts =
-#     fibonacci = domain_analyser.skeleton:run
+#     fibonacci = internetnl_domain_analyse.skeleton:run
 # And any other entry points, for example:
 # pyscaffold.cli =
 #     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
