--- a/setup.cfg
+++ b/setup.cfg
@@ -62,7 +62,7 @@ testing =
 [options.entry_points]
 # Add here console scripts like:
 console_scripts =
-    internetnl_domain_analyse = domain_analyser.domein_analyse:main
+    internetnl_domain_analyse = ineternetnl_domain_analyse.domein_analyse:main
 # For example:
 # console_scripts =
 #     fibonacci = internetnl_domain_analyse.skeleton:run
