--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ tldextract>=2.2.0
 importlib_metadata>=2.0.0
 matplotlib>=3.3.2
 seaborn>=0.11.1
-cbsplotlib>=0.0.0
+cbsplotlib>=0.4.2
 pylatex>=1.4.1
 yaml>=0.2.5
 pyyaml>=5.4.1
@@ -51,7 +51,7 @@ cython>=0.29.22
 hypothesis>=6.1.1
 yamlloader>=0.5.5
 pypdf2>=1.26.0
-openssl>=1.1.1j
+openssl>=1.1.1
 bs4>=4.9.3
 beautifulsoup4>=4.9.3
 pyparsing>=2.4.7
