--- a/requirements.txt
+++ b/requirements.txt
@@ -2,12 +2,10 @@ numpy>=1.19.2
 pandas>=1.1.5
 requests>=2.25.1
 tldextract>=2.2.0
-importlib_metadata>=2.0.0
 matplotlib>=3.3.2
 seaborn>=0.11.1
 cbsplotlib>=0.4.2
 pylatex>=1.4.1
-yaml>=0.2.5
 pyyaml>=5.4.1
 sphinx>=3.5.1
 pyscaffold>=4.2.1
@@ -15,48 +13,26 @@ setuptools>=52.0.0
 tox>=3.25.0
 pyodbc>=4.0.30
 pairing>=0.1.3
-savreaderwriter>=3.4.2
 unidecode>=1.1.2
 lxml>=4.6.2
-tabulate>=0.8.7
 openpyxl>=3.0.6
 xlsxwriter>=1.3.7
 tqdm>=4.56.0
 typing_extensions>=3.7.4.3
-werkzeug>=1.0.1
-networkx>=2.6.3
-colorama>=0.4.4
-jinja2>=2.11.3
 pytz>=2021.1
 jsonschema>=3.2.0
-sqlparse>=0.4.2
 python-dateutil>=2.8.1
 six>=1.15.0
 cryptography>=3.3.1
-future>=0.18.2
 regex>=2021.11.10
 pytest>=6.2.2
-pydantic>=1.8.2
 babel>=2.9.0
-pytimeparse>=1.1.8
-trio>=0.19.0
 urllib3>=1.26.3
-psutil>=5.8.0
-flask>=1.1.2
-django>=3.2.9
-ipython>=7.20.0
 decorator>=4.4.2
 scipy>=1.6.0
-cython>=0.29.22
-hypothesis>=6.1.1
 yamlloader>=0.5.5
-pypdf2>=1.26.0
-openssl>=1.1.1
-bs4>=4.9.3
 beautifulsoup4>=4.9.3
 pyparsing>=2.4.7
-nose>=1.3.7
-xlrd>=2.0.1
-pillow>=8.1.0
-icu>=58.2
-typer>=0.4.0
+importlib_metadata~=4.8.2
+yaml~=0.2.5
+path~=16.2.0
