--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ pyyaml>=5.4.1
 sphinx>=3.5.1
 pyscaffold>=4.2.1
 setuptools>=52.0.0
-tox>=3.25.0
+tox
 pyodbc>=4.0.30
 pairing>=0.1.3
 unidecode>=1.1.2
@@ -34,4 +34,4 @@ yamlloader>=0.5.5
 beautifulsoup4>=4.9.3
 pyparsing>=2.4.7
 yaml~=0.2.5
-path~=16.2.0
+path
