added some fixed for new pandas version

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,10 @@
-numpy>=1.19.2
-pandas>=1.1.5
-requests>=2.25.1
-tldextract>=3.2.0
-matplotlib>=3.3.2
-seaborn>=0.11.1
-cbsplotlib>=0.4.2
-pylatex>=1.4.1
-pyyaml>=5.4.1
-sphinx>=3.5.1
-pyscaffold>=4.2.1
-setuptools>=52.0.0
-tox
-pyodbc>=4.0.30
-pairing>=0.1.3
-unidecode>=1.1.2
-lxml>=4.6.2
-openpyxl>=3.0.6
-xlsxwriter>=1.3.7
-tqdm>=4.56.0
-typing_extensions>=3.7.4.3
-pytz>=2021.1
-jsonschema>=3.2.0
-python-dateutil>=2.8.1
-six>=1.15.0
-cryptography>=3.3.1
-regex>=2021.11.10
-pytest>=6.2.2
-babel>=2.9.0
-urllib3>=1.26.3
-decorator>=4.4.2
-scipy>=1.6.0
-yamlloader>=0.5.5
-beautifulsoup4>=4.9.3
-pyparsing>=2.4.7
-yaml~=0.2.5
-path
+cbsplotlib
+ict_analyser
+importlib_metadata
+matplotlib
+PyLaTeX
+PyYAML
+setuptools
+setuptools
+tldextract
+tqdm
