--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@
 
 [metadata]
 name = internetnl_domain_analyse
-description = Add a short description here!
+description = A tool to create image belong to internetnl time series
 author = EVLT
 author_email =
 license = MIT
@@ -45,6 +45,13 @@ package_dir =
 
 install_requires =
     importlib-metadata; python_version<"3.8"
+    cbsplotlib
+    ict_analyser
+    PyLaTeX
+    PyYAML
+    tldextract
+    tqdm
+
 [options.packages.find]
 where = src
 exclude =
@@ -58,6 +65,11 @@ exclude =
 testing =
     pytest
     pytest-cov
+dev =
+    pytest
+    pytest-cov
+    tox
+    pre-commit
 
 [options.entry_points]
 # Add here console scripts like:
