--- a/setup.cfg
+++ b/setup.cfg
@@ -47,6 +47,8 @@ install_requires =
     importlib-metadata; python_version<"3.8"
     cbsplotlib
     ict_analyser
+    openpyxl
+    internetnl-scan
     PyLaTeX
     PyYAML
     tldextract
