--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,16 @@
-cbsplotlib
-ict_analyser
-internetnl-scan
-openpyxl
-PyLaTeX
-PyYAML
-setuptools
-tldextract
-tqdm
+cbsplotlib~=0.5.0
+ict_analyser~=2024.0.1.post1.dev2+g6c43209
+PyLaTeX~=1.4.2
+PyYAML~=6.0.1
+setuptools~=65.5.0
+tldextract~=5.1.2
+tqdm~=4.66.2
+pandas~=2.2.1
+internetnl_scan~=1.4
+importlib_metadata~=7.1.0
+matplotlib~=3.8.3
+numpy~=1.26.4
+seaborn~=0.13.2
+PyScaffold~=4.5
+tox~=4.14.2
+requests~=2.31.0
