--- a/setup.cfg
+++ b/setup.cfg
@@ -45,36 +45,43 @@ package_dir =
 
 install_requires =
     importlib-metadata; python_version<"3.8"
+    weighted_sample_statistics
     cbsplotlib
-    ict_analyser
-    openpyxl
-    internetnl-scan
     PyLaTeX
     PyYAML
     tldextract
     tqdm
+    pandas
+    internetnl_scan
+    importlib_metadata
+    matplotlib
+    numpy
+    seaborn
+    requests
+    openpyxl
+    internetnl-scan
 
-[options.packages.find]
-where = src
-exclude =
-    tests
+    [options.packages.find]
+    where = src
+    exclude =
+        tests
 
-[options.extras_require]
-# Add here additional requirements for extra features, to install with:
-# `pip install internetnl_domain_analyse[PDF]` like:
-# PDF = ReportLab; RXP
-# Add here test requirements (semicolon/line-separated)
-testing =
-    pytest
-    pytest-cov
-dev =
-    pytest
-    pytest-cov
-    tox
-    pre-commit
+    [options.extras_require]
+    # Add here additional requirements for extra features, to install with:
+    # `pip install internetnl_domain_analyse[PDF]` like:
+    # PDF = ReportLab; RXP
+    # Add here test requirements (semicolon/line-separated)
+    testing =
+        pytest
+        pytest-cov
+    dev =
+        pytest
+        pytest-cov
+        tox
+        pre-commit
 
-[options.entry_points]
-# Add here console scripts like:
+    [options.entry_points]
+    # Add here console scripts like:
 console_scripts =
     internetnl_domain_analyse = internetnl_domain_analyse.domein_analyse:main
 # For example:
