--- a/setup.cfg
+++ b/setup.cfg
@@ -5,15 +5,15 @@
 [metadata]
 name = internetnl_domain_analyse
 description = A tool to create image belong to internetnl time series
-author = EVLT
+author = Eelco van Vliet
 author_email =
 license = MIT
 long_description = file: README.rst
 long_description_content_type = text/x-rst; charset=UTF-8
-url = https://github.com/pyscaffold/pyscaffold/
+url = https://github.com/eelcovv/internetnl_domain_analyse
 # Add here related links, for example:
 project_urls =
-    Documentation = https://pyscaffold.org/
+    Documentation = https://internetnl-domain-analyse.readthedocs.io/en/latest/
 #    Source = https://github.com/pyscaffold/pyscaffold/
 #    Changelog = https://pyscaffold.org/en/latest/changelog.html
 #    Tracker = https://github.com/pyscaffold/pyscaffold/issues
