--- a/tox.ini
+++ b/tox.ini
@@ -13,42 +13,62 @@ isolated_build = True
 setenv =
     TOXINIDIR = {toxinidir}
 passenv =
-    HOM
+    HOME
+    SETUPTOOLS_*
 extras =
     testing
 commands =
     pytest {posargs}
 
 
-[testenv:{clean,build}]
+
+[testenv:{build,clean}]
 description =
-    Build (or clean) the package in isolation according to instructions in:
-    https://setuptools.readthedocs.io/en/latest/build_meta.html#how-to-use-it
-    https://github.com/pypa/pep517/issues/91
-    https://github.com/pypa/build
-# NOTE: build is still experimental, please refer to the links for updates/issues
+    build: Build the package in isolation according to PEP517, see https://github.com/pypa/build
+    clean: Remove old distribution files and temporary build artifacts (./build and ./dist)
+# https://setuptools.pypa.io/en/stable/build_meta.html#how-to-use-it
 skip_install = True
 changedir = {toxinidir}
+allowlist_externals = mkdir
 deps =
     build: build[virtualenv]
-commands =
-    clean: python -c 'from shutil import rmtree; rmtree("build", True); rmtree("dist", True)'
-    build: python -m build .
-# By default `build` produces wheels, you can also explicitly use the flags `--sdist` and `--wheel`
-
-
-[testenv:{docs,doctests}]
-description = invoke sphinx-build to build the docs/run doctests
+passenv =
+    SETUPTOOLS_*
+# nodig om te voorkomen dat python.exe vanuit C gerund wordt
 setenv =
-    DOCSDIR = {toxinidir}/docs
-    BUILDDIR = {toxinidir}/docs/_build
+    TEMP = {toxinidir}/.tox/.tmp
+commands =
+    clean: python -c 'import shutil; [shutil.rmtree(p, True) for p in ("build", "dist", "docs/_build")]'
+    clean: python -c 'import pathlib, shutil; [shutil.rmtree(p, True) for p in pathlib.Path("src").glob("*.egg-info")]'
+    build: python -m build {posargs}
+# By default, both `sdist` and `wheel` are built. If your sdist is too big or you don't want
+# to make it available, consider running: `tox -e build -- --wheel`
+
+
+[testenv:{docs,doctests,linkcheck,pdf}]
+description =
+    docs: Invoke sphinx-build to build the docs
+    pdf: Invoke sphinx-build to build the latex pdf
+    doctests: Invoke sphinx-build to run doctests
+    linkcheck: Check for broken links in the documentation
+changedir = {toxinidir}
+allowlist_externals = make
+passenv =
+    SETUPTOOLS_*
+setenv =
+    DOCSDIR = docs
+    BUILDDIR = docs/_build
     docs: BUILD = html
+    pdf: BUILD = latex
     doctests: BUILD = doctest
+    linkcheck: BUILD = linkcheck
+    TEMP = {toxinidir}/.tox/.tmp
 deps =
     -r {toxinidir}/docs/requirements.txt
     # ^  requirements.txt shared with Read The Docs
 commands =
-    sphinx-build -b {env:BUILD} -d "{env:BUILDDIR}/doctrees" "{env:DOCSDIR}" "{env:BUILDDIR}/{env:BUILD}" {posargs}
+    sphinx-build --color -b {env:BUILD} -d "{env:BUILDDIR}/doctrees" "{env:DOCSDIR}" "{env:BUILDDIR}/{env:BUILD}" {posargs}
+    pdf: make -C "{env:BUILDDIR}/{env:BUILD}"
 
 
 [testenv:publish]
@@ -59,10 +79,14 @@ description =
 skip_install = True
 changedir = {toxinidir}
 passenv =
+    # See: https://twine.readthedocs.io/en/latest/
     TWINE_USERNAME
     TWINE_PASSWORD
     TWINE_REPOSITORY
+    TWINE_REPOSITORY_URL
 deps = twine
+setenv =
+    TEMP = {toxinidir}/.tox/.tmp
 commands =
     python -m twine check dist/*
-    python -m twine upload {posargs:--repository testpypi} dist/*
+    python -m twine upload {posargs:--repository {env:TWINE_REPOSITORY:testpypi}} dist/*
